Speichern und Löschen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name = Todo Liste
+
+spring.datasource.url = jdbc:h2:file:~/todoapp
+spring.datasource.username = tomasz
+spring.datasource.password = geheim
+
+# Webbasierter Client für die DB
+spring.h2.console.enabled = true
+
+# Spring verwaltet die DB-Tabellen
+spring.jpa.hibernate.ddl-auto = update
